--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>main_project</title>
+    <style>body{
+      background-image:url(./static/back2.jpg);
+    }</style>
   </head>
   <body>
     <div id="app"></div>
